--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>ch.uzh.lareida</groupId>
     <artifactId>spark-sna</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <pluginRepositories>
         <pluginRepository>
@@ -71,14 +72,14 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.10</artifactId>
             <version>1.6.0</version>
-            <scope>provided</scope>
+           <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-assembly_2.10</artifactId>
             <version>1.6.0</version>
-            <scope>provided</scope>
+
         </dependency>
 
     </dependencies>
