--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,12 @@
 
 
    <build>
+       <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
-               <version>3.2.1</version>
+
                <executions>
                    <execution>
                        <goals>
@@ -74,12 +75,21 @@
             <version>1.6.0</version>
            <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.10</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.10</artifactId>
+            <version>1.6.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-assembly_2.10</artifactId>
             <version>1.6.0</version>
-
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
