--- a/pom.xml
+++ b/pom.xml
@@ -66,14 +66,12 @@
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>2.10.2</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.10</artifactId>
             <version>1.6.0</version>
-           <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -89,7 +87,12 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-assembly_2.10</artifactId>
             <version>1.6.0</version>
-            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.databricks</groupId>
+            <artifactId>spark-csv_2.10</artifactId>
+            <version>1.5.0</version>
         </dependency>
 
     </dependencies>
