--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <version>1.6.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.10</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>
+        </dependency>
       </dependencies>
 
 </project>
