--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
         </repository>
     </repositories>
 
+    <properties>
+        <hadoop.version>2.6.0</hadoop.version>
+        <spark.version>1.6.0</spark.version>
+    </properties>
+
 
    <build>
        <sourceDirectory>src</sourceDirectory>
@@ -72,25 +77,35 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.10</artifactId>
-            <version>1.6.0</version>
+            <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.10</artifactId>
-            <version>1.6.0</version>
+            <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>${hadoop.version}</version>
+
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.10</artifactId>
-            <version>1.6.0</version>
+            <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-assembly_2.10</artifactId>
-            <version>1.6.0</version>
+            <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -100,6 +115,8 @@
             <version>3.0.1</version>
             <scope>test</scope>
         </dependency>
+
+
       </dependencies>
 
 </project>
